- https://github.com/eclipse-sirius/sirius-web/issues/3407[#3407] [diagram] Fix performance issue during node drag.
- https://github.com/eclipse-sirius/sirius-web/issues/3424[#3424] [emf] Fix wrong document migration data when creating a document.
- https://github.com/eclipse-sirius/sirius-web/issues/3443[#3443] [diagram] Prevent outside label to be truncated.

=== New Features

- https://github.com/eclipse-sirius/sirius-web/issues/3271[#3271] [test] Factorize GraphQL queries used in tests.
4 new projects have been created to store GraphQL queries, mutations, and subscription runners: `sirius-components-graphql-tests`, `sirius-components-trees-tests`, `sirius-components-portals-tests`, `sirius-web-tests`.
`sirius-components-forms-tests` and `sirius-components-diagrams-tests` now both contain GraphQL queries related to forms and diagrams.
- https://github.com/eclipse-sirius/sirius-web/issues/3236[#3236] [view] Add a new expression in `NodeDescription` to specify whether a node is collapsed by default.
- https://github.com/eclipse-sirius/sirius-web/issues/3236[#3236] [diagram] Add a new predicate in `NodeDescription` to specify whether a node is collapsed by default.
- https://github.com/eclipse-sirius/sirius-web/issues/3163[#3163] [gantt] Add support for task drag&drop in task table.
- https://github.com/eclipse-sirius/sirius-web/issues/3088[#3088] [diagram] Add the support for inside/outside labels.
In this first version, the only available positions _top_center_ for inside label en _bottom_center_ for outside label.
+
image:doc/screenshots/inside_outside_labels.png[Isinde outside label example, 70%]
- https://github.com/eclipse-sirius/sirius-web/issues/3237[#3237] [diagram] Add a `DiagramServices` class containing services to expand and collapse nodes from AQL expressions (via the new `diagramServices` variable) and Java services.